--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Colombo Test</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Id, voluptas consequuntur! Consequatur perferendis magnam corporis labore voluptate quos eius eum vero, quae eos velit quasi, possimus, fugit delectus placeat! Aliquid?
-    </p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <script src="//unpkg.com/alpinejs" defer></script> <!-- Check this later! From alpine.js-->
+    </head>
+
+    <body>
+        <h1>Colombo Test</h1>
+
+        <div x-data="{ open: false }">
+            <button @click="open = true">Expand</button>
+        
+            <div x-show="open">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id, voluptas consequuntur! Consequatur perferendis magnam corporis labore voluptate quos eius eum vero, quae eos velit quasi, possimus, fugit delectus placeat! Aliquid?
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
